--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,8 @@
-﻿== 1.2.3 ==
+﻿== 1.2.4 ==
+* Fixed issues with symmetry related asymId generation.
+* cartoons query now also includes het groups and waters.
+
+== 1.2.3 ==
 * Fixed a bug CIF writer with duplicate _entity records.
 * Fixed a bug with sometimes incorrect asym ids in symmetry related queries.
 * Basic Query API has been refactored in the core.
