--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿== 1.2.4 ==
+﻿== 1.2.5 ==
+* Added support for .gz files.
+
+== 1.2.4 ==
 * Fixed issues with symmetry related asymId generation.
 * cartoons query now also includes het groups and waters.
 
