--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿== 1.2.6 ==
+﻿== 1.2.7 ==
+* Updated to newer version of Core that fixes more issues with assembly generation.
+
+== 1.2.6 ==
 * Updated to newer version of Core that fixes issues with symmetry/assembly generation.
 
 == 1.2.5 ==
