--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿== 1.2.8 ==
+﻿== 1.2.9 ==
+* Additional info included in the _entity category.
+
+== 1.2.8 ==
 * Updated to newer version of Core that fixes issues with overlapping secondary structure.
 
 == 1.2.7 ==
