--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,7 @@
-﻿== 1.3.0 ==
+﻿== 1.3.1 ==
+* Added lowPrecisionCoords option for queries.
+
+== 1.3.0 ==
 * Added support for choosing output format.
 * Added support for the "mmfBCIF" format.
 * Improved documentation.
