--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,5 +1,6 @@
 ﻿== 1.3.2 ==
 * Added the /trace query.
+* Fixed a bug in the mmCIF assembly parsing.
 
 == 1.3.1 ==
 * Added lowPrecisionCoords option for queries.
