--- a/CoordinateServer/ChangeLog.txt
+++ b/CoordinateServer/ChangeLog.txt
@@ -1,4 +1,8 @@
-﻿== 1.3.2 ==
+﻿== 1.3.3 ==
+* Updated to new core.
+* Attempts to counter the GC from collecting code on long runs.
+
+== 1.3.2 ==
 * Added the /trace query.
 * Fixed a bug in the mmCIF assembly parsing.
 
